# variks-utilities

./: README.md  variks-utilities.cabal
src/VariksGPTools/: List.hs
testes/: listcrap.hs
