cabal-version:      2.4
name:               variks-utilities
version:            0.1.0.0

synopsis: General-purpose public domain functions

description: @variks-utilities@ is a library which contains functions
             which solve various problems which are often encountered
             by VARIK VALEFOR.  Instead of implementing
             program-specific solutions for these problems, VARIK
             combines many such solutions into a single library which
             can be freely used in other programs.

bug-reports: https://github.com/varikvalefor/variks-utilities/issues

author:             Varik Valefor
maintainer:         varikvalefor@aol.com

copyright: Unlicense
category: General

library
    exposed-modules:
      VariksGPTools.List
    other-modules:
    other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite listcrap
  type:              exitcode-stdio-1.0
  ghc-options:       -dynamic -Wall
  main-is:           listcrap.hs
  hs-source-dirs:    testes
  build-depends:
    variks-utilities,
    base             ^>= 4.14.1.0
  default-language: Haskell2010
